@@ -98,7 +98,7 @@ Ext.extend(GO.cms.CommentDialog, Ext.Window,{
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope: this
 				
