@@ -192,7 +192,7 @@ Ext.extend(GO.cms.FileCategoriesTree, Ext.tree.TreePanel,{
 			callback : function (options, success,response) {
 				var responseParams = Ext.decode(response.responseText);
 				if (!success) {
-					Ext.Msg.alert(GO.lang['strError'], responseParams.feedback)
+					GO.errorDialog.show(responseParams.feedback)
 				}
 				else
 				{
@@ -218,7 +218,7 @@ Ext.extend(GO.cms.FileCategoriesTree, Ext.tree.TreePanel,{
 			callback : function (options, success,response) {
 				var responseParams = Ext.decode(response.responseText);
 				if (!success) {
-					Ext.Msg.alert(GO.lang['strError'], responseParams.feedback)
+					GO.errorDialog.show(responseParams.feedback)
 				}
 				else
 				{
