@@ -59,7 +59,7 @@ Ext.extend(GO.dokuwiki.SettingsDialog, Ext.Window,{
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope: this
 			});
@@ -77,7 +77,7 @@ Ext.extend(GO.dokuwiki.SettingsDialog, Ext.Window,{
 					GO.dokuwiki.settings.title = response.data.title;
 					GO.dokuwiki.iFrameComponent.setUrl(GO.dokuwiki.settings.externalUrl);
 				} else {
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback);
+					GO.errorDialog.show(action.result.feedback);
 				}
 			},
 			scope: this
