@@ -108,7 +108,7 @@ GO.postfixadmin.MailboxDialog = Ext.extend(GO.dialog.TabbedFormDialog,{
 //				},
 //				failure:function(form, action)
 //				{
-//					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+//					GO.errorDialog.show(action.result.feedback)
 //				},
 //				scope: this
 //				
