@@ -149,7 +149,7 @@ Ext.extend(GO.tasks.TaskDialog, Ext.util.Observable, {
 					
 			},
 			failure : function(form, action) {
-				Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+				GO.errorDialog.show(action.result.feedback)
 			},
 			scope : this
 
