@@ -4,37 +4,27 @@ GO.ErrorDialog = function(config) {
 	Ext.apply(config, {
 		width : 550,
 		height : 300,
-		autoHeight:true,
 		closeAction : 'hide',
 		plain : true,
 		border : false,
 		closable : true,
 		title : GO.lang.strError,
 		modal : false,
+		
+		layout:'fit',
 		items : [
-				this.messagePanel = new Ext.FormPanel({
-							region : 'center',
-							cls : 'go-error-dialog',
-							autoHeight:true,
-							html : ''
-						}), 
-				this.detailPanel = new Ext.Panel({
-					region : 'south',
-					collapsible : true,
-					collapsed:true,
-					height : 150,
-					title : GO.lang.errorDetails,
-					titleCollapse:true,
-					autoScroll:true,
-					html:''
-				})],
+		this.messagePanel = new Ext.Panel({							
+			cls : 'go-error-dialog',		
+			autoScroll:true,
+			html : ''
+		})],
 		buttons : [{
-					text : GO.lang.cmdClose,
-					handler : function() {
-						this.hide();
-					},
-					scope : this
-				}]
+			text : GO.lang.cmdClose,
+			handler : function() {
+				this.hide();
+			},
+			scope : this
+		}]
 	});
 
 	GO.ErrorDialog.superclass.constructor.call(this, config);
@@ -42,28 +32,28 @@ GO.ErrorDialog = function(config) {
 
 Ext.extend(GO.ErrorDialog, GO.Window, {
 
-			show : function(error, details) {
+	show : function(error, details) {
 
-				if (!this.rendered)
-					this.render(Ext.getBody());
+		if (!this.rendered)
+			this.render(Ext.getBody());
 
-				this.detailPanel.collapse();
+		//				this.detailPanel.collapse();
 				
-				if(!error)
-					error = "No error message given";
+		if(!error)
+			error = "No error message given";
 
-				this.messagePanel.body.update(error);
+		this.messagePanel.body.update(error);
 				
-				if(GO.util.empty(details))
-				{
-					this.detailPanel.hide();
-				}else
-				{
-					this.detailPanel.show();
-					this.detailPanel.body.update('<pre>'+details+'</pre>');
-				}
+		//				if(GO.util.empty(details))
+		//				{
+		//					this.detailPanel.hide();
+		//				}else
+		//				{
+		//					this.detailPanel.show();
+		//					this.detailPanel.body.update('<pre>'+details+'</pre>');
+		//				}
 
-				GO.ErrorDialog.superclass.show.call(this);
-			}
-		});
+		GO.ErrorDialog.superclass.show.call(this);
+	}
+});
 GO.errorDialog = new GO.ErrorDialog();
