@@ -382,7 +382,7 @@ GO.dialog.TabbedFormDialog = Ext.extend(GO.Window, {
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback);
 				},
 				scope: this				
 			});
