@@ -5,6 +5,9 @@
 - TreeSelect custom field will display the value formatted correctly
 - The quick add bar for tasks will use the specified date for begin and end time of task
 - Updated Norwegian translation
+- When using LDAP authentication it will not fall back to Group-Office login when LDAP authentication fails.
+- Smarter address and housenumber handling with ActiveSync
+- Use <base> html tag to correct relative links in HTML e-mails
 
 29-10-2012 4.0.121
 - New log file contained too much info.
